# Project-Manager_Agentic-AI

./: .gitignore  README.md
Crew/: requirements.txt
Crew/software_engineering_mentor/: .env.example  README.md  pyproject.toml  streamlit_app.py
Crew/software_engineering_mentor/src/software_engineering_mentor/: crew.py  main.py
Crew/software_engineering_mentor/src/software_engineering_mentor/config/: agents.yaml  tasks.yaml
Crew/software_engineering_mentor/src/software_engineering_mentor/tools/: complexity_analyzer.py  custom_tool.py
Google-ADK/: .env.example  agent.py  custom_tools.py  main.py  requirements.txt  session_logger.py  session_manager_enhanced.py
Google-ADK/logs/: workflow_state_20251027_194320.json
Learning-Resource/GenAI_Agents/: README.md
Learning-Resource/GenAI_Agents/01. Review of Important DL Concepts/: Sequence_Prediction_with_Recurrent_Neural_Net_Keras.ipynb  Text_Classification_with_LSTM.ipynb  imdb_labelled.txt
Learning-Resource/GenAI_Agents/CrewAI/: Demo_CrewAI.ipynb
Learning-Resource/GenAI_Agents/CrewAI/MCP/script_approach_examples/: multiple_servers_client_demo.py  sse_client_demo.py  stdio_client_demo.py  streamable_http_client_demo.py
Learning-Resource/GenAI_Agents/CrewAI/MCP/servers/: hello_http_server.py  math_stdio_server.py
