[project]
name = "software_engineering_mentor"
version = "0.1.0"
description = "software_engineering_mentor using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.203.1,<1.0.0"
]

[project.scripts]
software_engineering_mentor = "software_engineering_mentor.main:run"
run_crew = "software_engineering_mentor.main:run"
train = "software_engineering_mentor.main:train"
replay = "software_engineering_mentor.main:replay"
test = "software_engineering_mentor.main:test"
run_with_trigger = "software_engineering_mentor.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
